--- a/webproj/app/templates/layout.html
+++ b/webproj/app/templates/layout.html
@@ -1,5 +1,10 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
+    "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+    xmlns:foaf="http://xmlns.com/foaf/0.1/" xmlns:cs="http://www.xpand.com/rdf/"
+    version="XHTML+RDFa 1.0" xml:lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +12,7 @@
     {% load staticfiles %}
     <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'content/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'content/flags.min.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'content/site.css' %}" />
     <link href="{% static 'fonts/righteous.css' %}" rel="stylesheet">
     <link href="{% static 'fonts/cabin.css' %}" rel="stylesheet">
