--- a/webproj/app/templates/album.html
+++ b/webproj/app/templates/album.html
@@ -1,34 +1,34 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <section>
+    <section about="http://www.xpand.com/album/{{ artist }}/{{ album }}">
         <div class="container" style="padding-top: 40px">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="{% url 'artist' artist=artist %}">{{ artist }}</a></li>
+                    <li><a href="{% url 'artist' artist=artist %}" property="cs:MusicArtist">{{ artist }}</a></li>
                     <li>Albums</li>
-                    <li class="active">{{ album }}</li>
+                    <li class="active" property="foaf:name">{{ album }}</li>
                 </ol>
             </div>
             <div class="row">
                 <div class="col-md-4">
-                  <img class="img-rounded" src="{{ image }}" alt="">
+                  <img property="foaf:Image" class="img-rounded" src="{{ image }}" alt="">
                 </div>
                 <div class="col-md-7">
-                    <h1 class="my-4">{{ album }}<br>
-                        <small>by <a href="{% url 'artist' artist=artist %}" style="font-weight: bold"> {{ artist }}</a></small>
+                    <h1 class="my-4"><span property="foaf:name">{{ album }}</span><br>
+                        <small>by <a href="{% url 'artist' artist=artist %}" style="font-weight: bold" property="cs:MusicArtist">{{ artist }}</a></small>
                     </h1>
                     {% if tags|length > 1 %}
                         <br>
                         <span class="glyphicon glyphicon-tags"></span>&nbsp;
                         {% for tag in tags %}
                             <a href="{% url 'tag' tag=tag %}">
-                                <span class="label label-info" style="background-color: #4cae4c">{{ tag }}</span>
+                                <span class="label label-info" style="background-color: #4cae4c" property="cs:Tag">{{ tag }}</span>
                             </a>
                         {% endfor %}
                     {% endif %}
                     <br><br>
-                    <p>{{ wiki }}</p>
+                    <p><span property="cs:biography">{{ wiki }}</span></p>
                 </div>
             </div>
         </div>
@@ -36,52 +36,60 @@
             <hr>
             <div class="row">
                 <div class="col-md-5">
-                    <h3>
-                        Tracks in {{ album }}:
-                    </h3>
+                    {% if tracks|length > 0 %}
+                        <h3>Tracks in {{ album }}:</h3>
+                    {% else %}
+                        <h2>Sorry, no tracks are available.</h2>
+                    {% endif %}
                 </div>
                 <div class="col-md-5 col-md-offset-2" style="margin-top: 20px;">
-                    <h4>More albums by <a href="{% url 'artist' artist=artist %}">{{ artist }}</a>:</h4>
+                    {% if topAlbums|length > 1 %}
+                        <h4>More albums by <a href="{% url 'artist' artist=artist %}" property="cs:MusicArtist">{{ artist }}</a>:</h4>
+                    {% endif %}
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-5">
-                    <ul class="list-group">
-                        {% for track in tracks %}
-                             <a href="#" class="list-group-item">
-                                 <span class="glyphicon glyphicon-music"></span>&nbsp;&nbsp;
-                                 {{ track }}
-                             </a>
-                        {% endfor %}
-                    </ul>
+                    {% if tracks|length > 0 %}
+                        <ul class="list-group">
+                            {% for track in tracks %}
+                                 <a href="#" class="list-group-item" property="cs:Track">
+                                     <span class="glyphicon glyphicon-music"></span>&nbsp;&nbsp;
+                                     {{ track }}
+                                 </a>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
                 </div>
                 <div class="col-md-5 col-md-offset-2">
-                    <div class="col-md-9 panel panel-default">
-                        <div class="panel-body">
-                            <div class="tab-content clearfix">
-                                <div class="tab-pane panel-body active" id="albums">
-                                    <div class="container" style="padding-left: 5px; padding-right: 5px;">
-                                        {% for topAlbum in topAlbums %}
-                                            {% if topAlbum.0 != album %}
-                                                <br>
-                                                <div class="row">
-                                                    <div class="col-sm-3">
-                                                        <img class="img-rounded" height="70" width="70" src="{{ topAlbum.1 }}">
+                    {% if topAlbums|length > 1 %}
+                        <div class="col-md-9 panel panel-default">
+                            <div class="panel-body">
+                                <div class="tab-content clearfix">
+                                    <div class="tab-pane panel-body active" id="albums">
+                                        <div class="container" style="padding-left: 5px; padding-right: 5px;">
+                                            {% for topAlbum in topAlbums %}
+                                                {% if topAlbum.0 != album %}
+                                                    <br>
+                                                    <div class="row">
+                                                        <div class="col-sm-3">
+                                                            <img class="img-rounded" height="70" width="70" src="{{ topAlbum.1 }}">
+                                                        </div>
+                                                        <div class="col-sm-8">
+                                                            <br>
+                                                            <a href="{% url 'album' artist=artist album=topAlbum.0 %}" style="color: black">
+                                                                <h4 class="media-heading">{{ topAlbum.0 }}</h4>
+                                                            </a>
+                                                        </div>
                                                     </div>
-                                                    <div class="col-sm-8">
-                                                        <br>
-                                                        <a href="{% url 'album' artist=artist album=topAlbum.0 %}" style="color: black">
-                                                            <h4 class="media-heading">{{ topAlbum.0 }}</h4>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            {% endif %}
-                                        {% endfor %}
+                                                {% endif %}
+                                            {% endfor %}
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
